# Naive-Voxel-Engine

./: .editorconfig  .gitignore  CMakeLists.txt  README.MD  README.md
deprecated/: chunk.h.old
includes/: loguru.hpp
includes/glm/glm/ext/: vector_float3.hpp
libs/: loguru.cpp
libs/glad/: glad.c  glad.h
resources/: TODO.md
resources/shaders/chunkColor/: chunkColor.frag  chunkColor.vert
ressources/shaders/chunkColor/: chunkColor.frag  chunkColor.vert
ressources/shaders/uniformColor/: TransformVertexShader.vertexshader
src/: main.cpp
src/client/: camera.cpp  camera.h  chunk_cache.h  chunk_loading.cpp  chunk_loading.h  client.cpp  client.h  client_networking.cpp  client_networking.h  context.cpp  context.h  gllib.c  gllib.h  graphics.c  main.c  main.h  pool_allocator.h  terrain.c  terrain.h
src/client/ui/: debug_screen.h
src/client/utils/: chunk_cache.h  colors.h
src/client/utils/loaders/: obj_loader.cpp  obj_loader.h  shader_loader.cpp  shader_loader.h  texture_loader.cpp  texture_loader.h
src/client/utils/mesher/: ChunkUtil.cpp  ChunkUtil.h  chunk_util.cpp  chunk_util.h
src/client/utils/meshing/: basic_mesher.cpp  basic_mesher.h  greedy_mesher.cpp  greedy_mesher.h  line_mesher.cpp  line_mesher.h  mesh.h
src/client/utils/shader/: shader.h  shader_base.h  text_renderer.cpp  text_renderer.h
src/client/workers/: chunk_loading.cpp  chunk_loading.h  client_networking.cpp  client_networking.h
src/common/: event_types.h  world.cpp  world.h
src/common/entities/: entity.cpp  entity.h  entity_chunk.cpp  entity_chunk.h
src/common/utils/: direction.h  location.h  networking.cpp  networking.h  pool_allocator.h  positioning.h  positioning.tcc  safe_queue.h  stats.h  worker.cpp  worker.h
src/common/world/: chunk.cpp  chunk.h  grid.cpp  grid.h  voxel.h  voxels.h  world.cpp  world.h
src/common/world/entities/: EntityChunk.cpp  EntityChunk.h  EntityUniformVoxel.cpp  EntityUniformVoxel.h  EntityVoxel.cpp  IEntity.cpp  IEntity.h  entity.cpp  entity.h  entity_chunk.cpp  entity_chunk.h  entity_cube.cpp  entity_cube.h  entity_uniform_voxel.cpp  entity_uniform_voxel.cpp.old  entity_uniform_voxel.h  entity_uniform_voxel.h.old  entity_voxel.cpp  entity_voxel.cpp.old  entity_voxel.h  entity_voxel.h.old
src/common/world/generation/: biome.cpp  biome.h  chunk.cpp  chunk.h  decorator.cpp  decorator.h  world_provider.cpp  world_provider.h
src/server/: console.cpp  console.h  generator.cpp  generator.h  server.cpp  server.h  server_networking.cpp  server_networking.h  world.cpp  world.h
src/server/workers/: server_networking.cpp  server_networking.h
src/server/worldgen/: generator.cpp  generator.h  world.cpp  world.h
